# ClassiTag

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
classitag/: classify.py  classitag.py
script/: bootstrap  lint  test
