[tool.ruff]
fix = true
line-length = 100
target-version = "py311"
extend-select = [
    "B",    # flake8-bugbear
    "I",    # isort
    "ARG",  # flake8-unused-arguments
    "C4",   # flake8-comprehensions
    "EM",   # flake8-errmsg
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "RUF",  # Ruff-specific
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
    "EXE",  # flake8-executable
    "NPY",  # NumPy specific rules
    "PD",   # pandas-vet
    "FURB", # referb
    "PYI",  # flake8-pyi
]
ignore = ["G004"]
preview = true

[tool.mypy]
disallow_untyped_defs = true

[tool.poetry]
name = "classitag"
version = "0.0.1"
description = "Classification labeling of images"
authors = ["Jon Wakeley, <Jonathan.L.Wakeley@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11.6,<3.13"
pillow = "^10.1.0"
click = "^8.0"
tk = "^0.1.0"

[tool.poetry.group.dev.dependencies]
coverage = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-dependency = "*"
pytest-flask = "^1.3.0"
pytest-mock = "*"
pytest-runner = "*"
ruff = "*"
pytest-env = "^1.1.1"
types-pillow = "^10.1.0"
pyinstaller = "^6.3.0"
